--- a/project.json
+++ b/project.json
@@ -12,7 +12,7 @@
   // Version using semantic versioning.
   "version": "0.1.3",
   // Sources compiled for all targets.
-  "sources": [ "./**" ],
+  "sources": [ "./lib/**" ],
   // C sources if the project also compiles C sources
   // relative to the project file.
   // "c-sources": [ "csource/**" ],
@@ -28,8 +28,7 @@
     "c3docgen": {
       // Executable or library.
       "type": "executable",
-      // Additional libraries, sources
-      // and overrides of global settings here.
+      "sources": [ "./src/**"],
     },
   },
   // Global settings.
